--- a/styles.css
+++ b/styles.css
@@ -132,8 +132,8 @@
 }
 
 body {
-	width: calc(100vw - 1.5rem);
- 	height: calc(100vh - 1.5rem);
+	width: calc(100vw - 2 * 0.75rem);
+ 	height: calc(100vh - 2 * 0.75rem);
 
   overflow-x: hidden;
 
@@ -193,7 +193,7 @@ hr {
 
 	color: var(--couleur-main);
 	border-style: solid;
-  border-width: 0.075rem;
+  border-width: calc(0.15rem / 2);
 
 }
 
@@ -309,15 +309,25 @@ svg {
   font-weight: light;
 }
 
+.project-link {
+  padding: 0.1rem 0.25rem;
+
+  border-style: solid;
+  border-width: 0.075rem;
+  border-radius: 50px;
+}
+
 .project-link:hover {
-  text-decoration: underline wavy;
-  text-decoration-thickness: 0.05rem;
+  color: var(--couleur-fond-bis);
+  border-color: var(--couleur-main-bis);
+  background-color: var(--couleur-main-bis);
 }
 
 .project-text h2 {
   position: fixed;
   -webkit-backface-visibility: hidden;
   bottom: 0.75rem;
+  z-index: 5;
 
   font-family: var(--typo-titre);
   font-size: 5rem;
@@ -342,6 +352,14 @@ svg {
 .bold-text {
   font-family: var(--typo-courant);
   font-weight: bold;
+}
+
+.link {
+}
+
+.link:hover {
+  text-decoration: underline wavy;
+  text-decoration-thickness: 0.025rem;
 }
 
 #marquee {
