--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,13 @@
 @font-face {
     font-family: "Chubbo";
     font-style: italic;
+    font-weight: bold;
+    src: url(fonts/Chubbo-Italic.otf) format("opentype");
+}
+
+@font-face {
+    font-family: "Chubbo";
+    font-style: italic;
     font-weight: light;
     src: url(fonts/Chubbo-LightItalic.otf) format("opentype");
 }
@@ -48,7 +55,7 @@
 	--couleur-fond: blue;
 	--couleur-main: #C5CEFF;
 
-  --couleur-fond-bis: #E1E6FF;
+  --couleur-fond-bis: #f6f7fa;
   --couleur-main-bis: blue;
   
 	--typo-titre: "Alegreya";
@@ -57,6 +64,8 @@
   --typo-signe: "Wingdings";
   --typo-signe-bis: "Wingdings 2";
 }
+
+/* #E1E6FF */
 
 /* === RESPONSIVE === */
 
@@ -153,6 +162,8 @@ body {
 
  	color: var(--couleur-main);
  	background-color: var(--couleur-fond);
+
+  font-synthesis: none;
 }
 
 ::selection {
@@ -227,7 +238,7 @@ h1, h2 {
 svg {
   width: 4rem;
   height: 4rem;
-  fill: white;
+  fill: var(--couleur-main);
 }
 
 /* === CLASS === */
@@ -238,9 +249,14 @@ svg {
   margin-bottom: 0.75rem;
 }
 
-.italic-text {
+.italic-paragraph {
   font-style: italic;
   font-weight: light;
+}
+
+.italic-text {
+  font-style: italic;
+  font-weight: bold;
 }
 
 .bold-text {
@@ -388,6 +404,11 @@ svg {
 
 /* Infos */
 
+.infos-symbol-and-link {
+
+
+}
+
 .infos-link:hover {
   text-decoration: underline wavy;
   text-decoration-thickness: 0.025rem;
@@ -484,9 +505,11 @@ svg {
   font-family: var(--typo-titre);
   font-size: 2rem;
   line-height: 1.6rem;
+
+  user-select: none;
 }
 
-#outside-links {
+#infos-outside-links {
   width: 100%;
 
   position: fixed;
@@ -495,9 +518,11 @@ svg {
 
   display: flex;
   flex-direction: row;
-  gap: 0.75rem;
+  gap: 1rem;
 
   line-height: 0.75rem;
+
+  user-select: none;
 }
 
 #footer {
@@ -506,4 +531,6 @@ svg {
   -webkit-backface-visibility: hidden;
 
   line-height: 0.75rem;
+
+  user-select: none;
 }
